--- a/your-game-app/app/templates/index.html
+++ b/your-game-app/app/templates/index.html
@@ -10,7 +10,7 @@
             margin: 0;
         }
     </style>
-    <script src="../../static/js/phaser.2.4.2.min.js"></script>
+    <script src="../static/js/phaser.2.4.2.min.js"></script>
 </head>
 
 <body>
